Fix date string handling and update test case formatting
Updated the test case to use zero-padded month values for consistency. Modified `FromDateString` to default to `ChronoField.YEAR_OF_ERA` instead of `YEAR` for improved date parsing accuracy.